# asoka

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/agent/: artifacts.py  mcp_service.py  service.py  tools.py
app/db/: bootstrap.py  enums.py  models.py  repository.py  session.py
app/evidence/: ingestion.py
app/llm/: client.py  json_utils.py
app/mcp/: salesforce_client.py
app/orchestrator/: classifier.py  knowledge_agent.py  plan_agent.py  plan_backend.py  service.py
app/salesforce/: client.py  oauth.py  soql.py
app/security/: crypto.py
app/slack/: bolt_app.py  handlers.py
docs/: IMPLEMENTATION_PLAN.md  SYSTEM_ARCHITECTURE_STATUS.md  account_describe_snapshot.json
